welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:17: error: not found: value system
      system.out.println(tabColor((i+decalage)%tabColor.length):Int)
      ^Array2:17: error: type mismatch;
 found   : java.awt.Color
 required: Int
      system.out.println(tabColor((i+decalage)%tabColor.length):Int)
                                 ^